xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__static_call_with_placeholders.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"my_function(?, 2)(5)\")"
---
Atomic(
    Integer(
        7,
    ),
)
