xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__string_compare_eq_false.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"'hello' eq 'world'\")"
---
Atomic(
    Boolean(
        false,
    ),
)
