xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__string_compare_general_eq_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"'hello' = 'hello'\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
