xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__string_document_node.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a>A</a><b>B</b></doc>\"#, \"string(doc)\")"
---
Atomic(
    String(
        "AB",
    ),
)
