xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__string_integer.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"fn:string(1)\")"
---
Atomic(
    String(
        "1",
    ),
)
