xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__value_eq_false.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"1 eq 2\")"
---
Atomic(
    Boolean(
        false,
    ),
)
