xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__value_lt_false.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"2 lt 1\")"
---
Ok(
    Atomic(
        Boolean(
            false,
        ),
    ),
)
